Fixed bulletin icon, export modal doesn't have the double scrollbar issue anymore.

--- a/assets/css/bulletin.css
+++ b/assets/css/bulletin.css
@@ -17,7 +17,7 @@
 	overflow: hidden;
 	left: 0;
 	right: 20px;
-	background: url(bulletin.gif) no-repeat;
+	background: url(assets/images/bulletin.gif) no-repeat;
 }
 .bulletin li {
 	position: absolute;
